--- a/style.css
+++ b/style.css
@@ -151,12 +151,6 @@ a:hover {
   margin: 20px auto;
   display: block;
   width: 300px;
-  -webkit-mask-image: url(../images/namemasksmall.svg);
-  mask-image: url(../images/namemasksmall.svg);
-  -webkit-mask-position: center center;
-  mask-position: center center;
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
 }
 
 .home{
@@ -621,6 +615,12 @@ form textarea {
     margin:auto;
     max-width:460px}
   
+.nameimg {
+  margin: auto;
+  display: block;
+  width: 150px;
+}
+  
 .solidworkscell {
     padding: 2px 2px;
     width: 140px;
@@ -873,3 +873,5 @@ padding: 2px 2px;
     font-size: 0.7em;
 }
 }
+
+
