--- a/style.css
+++ b/style.css
@@ -585,10 +585,10 @@ form textarea {
 		font-size: 2em;
 	}
 	h2 {
-		font-size: 1em;
+		font-size: 1.5em;
 	}
     h3 {
-        font-size:0.9em;
+        font-size:1em;
     }
 	p {
 		font-size: 0.9em;
@@ -736,8 +736,16 @@ form textarea {
 @media only screen and (max-width: 600px) {
 	h1 {
 		font-size: 1.5em;
+	}
+	h2 {
+		font-size: 1em;
+	}
+    h3 {
+        font-size:0.9em;
     }
-  
+	p {
+		font-size: 0.8em;
+	}
 .container {
 	max-width: 90%;
     margin:auto;
@@ -806,8 +814,17 @@ padding: 2px 2px;
 
 @media only screen and (max-width: 400px) {
 	h1 {
-		font-size: 1.3em;
+		font-size: 1em;
+	}
+	h2 {
+		font-size: 0.9em;
+	}
+    h3 {
+        font-size:0.8em;
     }
+	p {
+		font-size: 0.7em;
+	}
   
 .container {
 	max-width: 90%;
