--- a/style.css
+++ b/style.css
@@ -272,32 +272,6 @@ li a:hover:not(.active) {
 	padding: 0 32px 32px 24px;
 }
 
-.article {
-    margin-top: 60px;
-    margin-bottom: 24px;
-    margin:auto;	
-    max-width: 66%;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    display: table;
-    border-top-style: solid;
-    border-bottom-style:solid;
-    border-color:white;
-    border-width:2px;
-    background: rgba(0, 0, 0, 0.6);
-}
-.article .inner {
-	display: table-row;  
-	text-shadow: 0px 0px 12px rgba(0, 0, 0, .2);
-}
-
-.article .inner .content{
-    margin: 60px 48px 48px 48px;
-	padding: 0 32px 32px 24px;
-}
-
-/* A bit of resizing of the main content items */
 h1 {
 	font-size: 3em;
     text-align: center;
@@ -459,7 +433,7 @@ form textarea {
 	}  
   
 .container .inner .content{
-	margin: 0 16px;
+	margin: 0 45px;
 	padding: 0;
 	}
   
@@ -527,9 +501,9 @@ form textarea {
 	}  
   
 .container .inner .content{
-	margin: 0 16px;
-	padding: 0;
-	}
+	margin: 0 30px;
+    margin-top:50px;
+  padding: 0;}
   
 .tablecontainer 
   {
@@ -606,7 +580,7 @@ form textarea {
 	}  
   
 .container .inner .content{
-	margin: 0 16px;
+	margin: 0 30px;
     margin-top:50px;
 	padding: 0;
 	}
@@ -759,7 +733,7 @@ form textarea {
 	}  
   
 .container .inner .content{
-	margin: 0 16px;
+	margin: 0 30px;
     margin-top:40px;
 	padding: 0;
 	}
@@ -840,7 +814,7 @@ padding: 2px 2px;
 	}  
   
 .container .inner .content{
-	margin: 0 16px;
+	margin: 0 30px;
     margin-top:35px;
 	padding: 0;
 	}
